--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -115,19 +115,19 @@ img {
   z-index: 99999;
   overflow: hidden;
   background: #ffffff; }
-
-.preloader:before {
-  content: "";
-  width: 6rem;
-  height: 6rem;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  border: 6px solid #e8bf5d;
-  border-top-color: #d6d6d6;
-  border-radius: 50%;
-  -webkit-animation: animate-preloader 1s linear infinite;
-  animation: animate-preloader 1s linear infinite; }
+  .preloader::before {
+    --size: 6rem;
+    content: "";
+    width: var(--size);
+    height: var(--size);
+    position: fixed;
+    top: calc(50% - var(--size) / 2);
+    left: calc(50% - var(--size) / 2);
+    border: 6px solid #e8bf5d;
+    border-top-color: #d6d6d6;
+    border-radius: 50%;
+    -webkit-animation: animate-preloader 1s linear infinite;
+    animation: animate-preloader 1s linear infinite; }
 
 @-webkit-keyframes animate-preloader {
   0% {
