change preloader type

--- a/app/views/layers/preloader.pug
+++ b/app/views/layers/preloader.pug
@@ -1,1 +1,5 @@
 .preloader#preloader
+  .preloader-arc(style="--value: 0;")
+  .preloader-arc(style="--value: 1;")
+  .preloader-arc(style="--value: 2;")
+  .preloader-arc(style="--value: 3;")
