--- a/app/styles/components/_loader.scss
+++ b/app/styles/components/_loader.scss
@@ -7,17 +7,17 @@
   z-index: 99999;
   overflow: hidden;
   background: $white-color;
-  &::before {
-    --size: 6rem;
-    content: "";
+  &-arc {
+    --size: 6.4rem;
     @include size(var(--size));
-    position: fixed;
+    border: 6px solid $primary-color;
+    border-color: $primary-color transparent transparent transparent;
+    border-radius: 50%;
+    position: absolute;
     top: calc(50% - var(--size) / 2);
     left: calc(50% - var(--size) / 2);
-    border: 6px solid $primary-color;
-    border-top-color: $border-color;
-    border-radius: 50%;
-    animation: animate-preloader 1s linear infinite;
+    animation: animate-preloader 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    animation-delay: calc(-0.15s * var(--value));
   }
 }
 
